Fix alignment of sort and filter options container

--- a/src/styles/pages/pokedex.module.css
+++ b/src/styles/pages/pokedex.module.css
@@ -149,21 +149,39 @@
   .pokedex-content-container {
     position: relative;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     & .control-bar-container {
       height: 50px;
+      width: 91vw;
+      gap: 5px;
+
+      & input {
+        width: 110px;
+      }
+
+      & input::placeholder {
+        font-size: 1.6rem;
+      }
 
       & .filter-and-sort {
         height: 100%;
+        width: 67%;
         gap: 10px;
 
         & .sort-container,
         & .filter-container {
           height: 100%;
+          width: 30%;
 
           & .sort-button,
           & .filter-button {
             height: 100%;
+            width: 100%;
+
+            font-size: 1.15rem;
           }
 
           & .sort-options,
@@ -171,9 +189,12 @@
             top: 15px;
 
             height: 183px;
+            width: 99%;
+
+            padding: 7px 0 0 0;
 
             & .option {
-              font-size: 2rem;
+              font-size: 1.5rem;
             }
           }
         }
